updated (bugfix for vercel not showing  img take-2) 112322 8:34am

--- a/css/styles.css
+++ b/css/styles.css
@@ -273,25 +273,25 @@ footer {
 }
 /* Carousel images starts here */
 .carouselimgML1 {
-  background-image: url(/carousel/ml1.JPG);
+  background-image: url('/img/carousel/ml1.JPG');
 }
 .carouselimgML2 {
-  background-image: url(/carousel/ml2.jpg);
+  background-image: url('/img/carousel/ml2.jpg');
 } 
 .carouselimgVAL1 {
-  background-image: url(/carousel/val1.jpg);
+  background-image: url('/img/carousel/val1.jpg');
 } 
 .carouselimgVAL2 {
-  background-image: url(/carousel/val2.jpg);
+  background-image: url('/img/carousel/val2.jpg');
 } 
 .carouselimgGTAV1 {
-  background-image: url(/carousel/gta51.jpg);
+  background-image: url('/img/carousel/gta51.jpg');
 } 
 .carouselimgGTAV2 {
-  background-image: url(/carousel/gta52.jpg);
+  background-image: url('/img/carousel/gta52.jpg');
 } 
 .carouselimgGTAV3 {
-  background-image: url(/carousel/gta53.jpg);
+  background-image: url('/img/carousel/gta53.jpg');
 } 
 /* Carousel images starts here */
 
